[package]
name = "gh-diary"
version = "0.1.0"
authors = ["nogtk <taka.naoga@moneyforward.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
